# hhfx-attendance-excel

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  electron.vite.config.ts  forge.config.cjs  generate_attendance_summary.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.node.json  tsconfig.web.json  打卡时间.xlsx
.github/workflows/: release-desktop.yml
attendance_app/: __init__.py  config.py  processor.py
attendance_core/: __init__.py  models.py  processor.py
attendance_sidecar/: __init__.py  main.py
backend/: __init__.py  main.py
docs/superpowers/plans/: 2026-06-30-attendance-app.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
packaging/pyinstaller/: attendance-worker.spec
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  api.ts  global.d.ts
src/shared/: ipc-contract.ts
tests/: test_api.py  test_attendance_sidecar.py  test_processor.py
